--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,11 +8,14 @@
 /*COMPONENTS*/
 @import "./components/section";
 @import "./components/container";
+@import "./components/logo";
+@import "./components/navigation";
+@import "./components/current-page";
 @import "./components/social";
 @import "./components/filter";
 @import "./components/backdrop";
-@import "./components/modal";
-@import "./components/modal-form";
+@import "./components/modal-window";
+@import "./components/subscribe-form";
 
 /*LAYOUT*/
 @import "./layout/header";
