--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ img {
 }
 
 .link {
+  display: block;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -82,11 +83,58 @@ img {
   padding: 0 15px;
 }
 
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+
+.logo__accent {
+  color: var(--accent-text-color);
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav__link {
+  color: var(--primary-text-color);
+  transition: color var(--default-transition-delay) var(--default-transition-timing);
+}
+
+.nav__link:hover, .nav__link:focus {
+  color: var(--accent-text-color);
+}
+
+.current-page {
+  display: block;
+  color: var(--accent-text-color);
+  position: relative;
+}
+
+.current-page::after {
+  display: block;
+  content: '';
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-text-color);
+  border-radius: 2px;
+  position: absolute;
+  bottom: -33px;
+}
+
 .social {
   display: flex;
   justify-content: space-between;
+  width: 206px;
   height: 44px;
-  margin: 16px 32px 30px 32px;
 }
 
 .social__link {
@@ -101,10 +149,21 @@ img {
   background-color: var(--accent-text-color);
 }
 
+.social__link--footer {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 .social__icon {
-  fill: var(--default-svg-color);
   margin: 12px;
   transition: fill var(--default-transition-delay) var(--default-transition-timing);
+}
+
+.social__icon--team {
+  fill: var(--default-svg-color);
+}
+
+.social__icon--footer {
+  fill: var(--white-text-color);
 }
 
 .social__link:hover .social__icon,
@@ -192,7 +251,7 @@ img {
   fill: var(--accent-text-color);
 }
 
-.modal-title {
+.modal__title {
   text-align: center;
   margin-bottom: 12px;
   font-weight: 700;
@@ -203,30 +262,13 @@ img {
   color: var(--primary-text-color);
 }
 
-.modal-input-item {
+.inputbox {
   position: relative;
   display: flex;
   flex-direction: column;
 }
 
-.modal-input-item:hover .input-text-box {
-  border: 1px solid var(--accent-text-color);
-}
-
-.modal-input-item:hover .input-icon {
-  fill: var(--accent-text-color);
-}
-
-.modal-input-item:focus-within .input-text-box {
-  outline: none;
-  border: 1px solid var(--accent-text-color);
-}
-
-.modal-input-item:focus-within .input-icon {
-  fill: var(--accent-text-color);
-}
-
-.input-label {
+.inputbox__label {
   position: relative;
   margin-bottom: 4px;
   font-weight: 400;
@@ -236,7 +278,7 @@ img {
   color: var(--secondary-text-color);
 }
 
-.input-icon {
+.inputbox__icon {
   position: absolute;
   top: 29px;
   left: 12px;
@@ -246,7 +288,15 @@ img {
   transition: fill var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.input-text-box {
+.inputbox:hover .inputbox__icon {
+  fill: var(--accent-text-color);
+}
+
+.inputbox:focus-within .inputbox__icon {
+  fill: var(--accent-text-color);
+}
+
+.inputbox__text {
   min-height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -256,7 +306,16 @@ img {
   transition: border var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.input-comment-box {
+.inputbox:hover .inputbox__text {
+  border: 1px solid var(--accent-text-color);
+}
+
+.inputbox:focus-within .inputbox__text {
+  outline: none;
+  border: 1px solid var(--accent-text-color);
+}
+
+.inputbox__comment {
   min-height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -270,16 +329,16 @@ img {
   transition: border var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.input-comment-box:hover {
+.inputbox__comment:hover {
   border: 1px solid var(--accent-text-color);
 }
 
-.input-comment-box:focus {
+.inputbox__comment:focus {
   outline: none;
   border: 1px solid var(--accent-text-color);
 }
 
-.input-comment-box::placeholder {
+.inputbox__comment::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -287,7 +346,7 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.license-label {
+.license {
   display: flex;
   align-items: center;
   padding-left: 12px;
@@ -299,7 +358,7 @@ img {
   color: var(--secondary-text-color);
 }
 
-.license-origin-cb {
+.license__origin-cb {
   width: 1px;
   height: 1px;
   margin: -1px;
@@ -311,7 +370,7 @@ img {
   overflow: hidden;
 }
 
-.license-svg-cb {
+.license__svg-cb {
   width: 16px;
   height: 15px;
   margin-right: 8px;
@@ -322,20 +381,20 @@ img {
   transition: fill var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.license-label:hover .license-svg-cb {
+.license:hover .license__svg-cb {
   border: 2px solid var(--accent-text-color);
 }
 
-.license-origin-cb:focus + .license-svg-cb {
+.license__origin-cb:focus + .license__svg-cb {
   border: 2px solid var(--accent-text-color);
 }
 
-.license-origin-cb:checked + .license-svg-cb {
+.license__origin-cb:checked + .license__svg-cb {
   fill: var(--accent-text-color);
   border: none;
 }
 
-.license-link {
+.license__link {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -343,7 +402,7 @@ img {
   color: var(--accent-text-color);
 }
 
-.button-submit {
+.license__button {
   width: 200px;
   height: 50px;
   display: block;
@@ -362,9 +421,61 @@ img {
   transition: background-color var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.button-submit:hover,
-.button-submit:focus {
+.license__button:hover, .license__button:focus {
   background-color: var(--hero-button-hover-color);
+}
+
+.subscribe {
+  position: relative;
+  display: flex;
+}
+
+.subscribe__input {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  margin-right: 12px;
+  background-color: var(--primary-bg-color);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe__button {
+  display: block;
+  padding: 10px 62px 10px 29px;
+  width: 200px;
+  height: 50px;
+  background: var(--accent-text-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--white-text-color);
+  cursor: pointer;
+  transition: background-color var(--default-transition-delay) var(--default-transition-timing);
+}
+
+.subscribe__button:hover, .subscribe__button:focus {
+  background-color: var(--hero-button-hover-color);
+}
+
+.subscribe__icon {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  content: '';
+  width: 24px;
+  height: 24px;
+  fill: var(--white-text-color);
 }
 
 /*LAYOUT*/
@@ -379,100 +490,44 @@ img {
   align-items: center;
 }
 
-.logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-}
-
 .page-header .logo {
   margin-right: 93px;
   color: var(--black-text-color);
 }
 
-.logo-accent {
-  color: var(--accent-text-color);
-}
-
-.nav {
-  color: var(--primary-text-color);
-  transition: color var(--default-transition-delay) var(--default-transition-timing);
-}
-
-.nav:hover,
-.nav:focus {
-  color: var(--accent-text-color);
-}
-
-.nav-list {
+.header-addr {
   display: flex;
-  align-items: center;
+  margin-left: auto;
 }
 
-.nav-item:not(:last-child) {
+.header-addr__item {
+  display: flex;
+  align-content: center;
+}
+
+.header-addr__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.current-page {
-  display: block;
-  color: var(--accent-text-color);
-  position: relative;
+.header-addr__icon {
+  margin-right: 10px;
+  fill: var(--secondary-text-color);
+  transition: fill var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.current-page::after {
-  display: block;
-  content: '';
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-text-color);
-  border-radius: 2px;
-  position: absolute;
-  bottom: -33px;
+.header-addr__item:focus-within .header-addr__icon,
+.header-addr__item:hover .header-addr__icon {
+  fill: var(--accent-text-color);
 }
 
-.addr {
+.header-addr__link {
   display: block;
   color: var(--secondary-text-color);
   transition: color var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.header-addr-item:hover > .addr,
-.addr:focus {
+.header-addr__item:hover .header-addr__link, .header-addr__link:focus {
   color: var(--accent-text-color);
-}
-
-.addr:hover {
-  color: var(--accent-text-color);
-}
-
-.header-addr-item:focus-within .header-icon {
-  fill: var(--accent-text-color);
-}
-
-.header-addr-list {
-  display: flex;
-  margin-left: auto;
-}
-
-.header-addr-item {
-  display: flex;
-  align-content: center;
-}
-
-.header-addr-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-addr-item:hover > .header-icon {
-  fill: var(--accent-text-color);
-}
-
-.header-icon {
-  margin-right: 10px;
-  fill: var(--secondary-text-color);
-  transition: fill var(--default-transition-delay) var(--default-transition-timing);
 }
 
 .hero {
@@ -635,6 +690,10 @@ img {
   letter-spacing: 0.03em;
 }
 
+.team .social {
+  margin: 16px 32px 30px 32px;
+}
+
 .clients {
   display: flex;
   justify-content: center;
@@ -748,48 +807,18 @@ img {
   padding-bottom: 60px;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-addr {
-  min-width: 231px;
-  margin-right: 70px;
-}
-
 .page-footer .logo {
   display: inline-block;
   margin-bottom: 20px;
   color: var(--white-text-color);
 }
 
-.real-address {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--white-text-color);
+.page-footer .container {
+  display: flex;
+  align-items: baseline;
 }
 
-.email,
-.phone {
-  display: inline-block;
-  margin-top: 9px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-social {
-  margin-right: 93px;
-}
-
-.footer-title {
+.page-footer__title {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
@@ -799,87 +828,34 @@ img {
   color: var(--white-text-color);
 }
 
-.footer-social-list {
-  display: flex;
-  justify-content: space-between;
-  width: 206px;
-  height: 44px;
+.page-footer__addresses {
+  min-width: 231px;
+  margin-right: 70px;
 }
 
-.footer-social-link {
-  display: inline-block;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-  transition: background-color var(--default-transition-delay) var(--default-transition-timing);
+.page-footer__social {
+  margin-right: 93px;
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
-  background-color: var(--accent-text-color);
-}
-
-.footer-social-icon {
-  fill: var(--white-text-color);
-  margin: 12px;
-}
-
-.footer-subscribe {
-  margin-top: 12px;
-}
-
-.footer-subscribe-items {
-  position: relative;
-  display: flex;
-}
-
-.subscribe-input {
-  width: 358px;
-  height: 50px;
-  padding: 15px 16px;
-  margin-right: 12px;
-  background-color: var(--primary-bg-color);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
+.footer-addr__link {
+  font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
+  font-size: 14px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  transition: color var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.subscribe-button {
-  display: block;
-  padding: 10px 62px 10px 29px;
-  width: 200px;
-  height: 50px;
-  background: var(--accent-text-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border: none;
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+.footer-addr__link:hover, .footer-addr__link:focus {
+  color: var(--accent-text-color);
+}
+
+.footer-addr__link--real {
   color: var(--white-text-color);
-  cursor: pointer;
-  transition: background-color var(--default-transition-delay) var(--default-transition-timing);
 }
 
-.subscribe-button:hover,
-.subscribe-button:focus {
-  background-color: var(--hero-button-hover-color);
-}
-
-.subscribe-icon {
-  position: absolute;
-  top: 13px;
-  right: 28px;
-  content: '';
-  width: 24px;
-  height: 24px;
-  fill: var(--white-text-color);
+.footer-addr__link--email, .footer-addr__link--phone {
+  margin-top: 9px;
+  color: rgba(255, 255, 255, 0.6);
 }
 /*# sourceMappingURL=main.css.map */
