--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,29 @@ img {
   color: var(--primary-text-color);
 }
 
+.modal__button {
+  width: 200px;
+  height: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--accent-text-color);
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--white-text-color);
+  cursor: pointer;
+  transition: background-color var(--default-transition-delay) var(--default-transition-timing);
+}
+
+.modal__button:hover, .modal__button:focus {
+  background-color: var(--hero-button-hover-color);
+}
+
 .inputbox {
   position: relative;
   display: flex;
@@ -400,29 +423,6 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--accent-text-color);
-}
-
-.license__button {
-  width: 200px;
-  height: 50px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--accent-text-color);
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--white-text-color);
-  cursor: pointer;
-  transition: background-color var(--default-transition-delay) var(--default-transition-timing);
-}
-
-.license__button:hover, .license__button:focus {
-  background-color: var(--hero-button-hover-color);
 }
 
 .subscribe {
